--- a/end_to_end_test.tex
+++ b/end_to_end_test.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt,a4paper]{article}
 
 \usepackage[utf8]{inputenc}
+\usepackage[T2A]{fontenc}
 \usepackage[russian,english]{babel}
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{geometry}
